Update find feature